# axum_course

./: .env  Cargo.toml  setup.sh
module-01-intro/: Cargo.toml
module-01-intro/src/: main.rs
module-02-routing/: Cargo.toml
module-02-routing/src/: main.rs
module-03-extractors/: Cargo.toml
module-03-extractors/src/: main.rs
module-04-responses/: Cargo.toml
module-04-responses/src/: main.rs
module-05-state/: Cargo.toml
module-05-state/src/: main.rs
module-06-middleware/: Cargo.toml
module-06-middleware/src/: main.rs
module-07-errors/: Cargo.toml
module-07-errors/src/: main.rs
module-08-database/: Cargo.toml
module-08-database/src/: main.rs
module-09-auth/: Cargo.toml
module-09-auth/src/: main.rs
module-10-advanced/: Cargo.toml
module-10-advanced/src/: main.rs
module-11-testing/: Cargo.toml
module-12-production/: Cargo.toml
