[package]
name = "module-09-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 ={ workspace = true}
rand={workspace = true}
chrono={workspace = true}
jsonwebtoken={workspace = true}
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
dotenvy ={ workspace = true}
uuid = { workspace = true }