[package]
name = "module-10-advanced"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["ws", "multipart"]}
tokio = { workspace = true }
serde = { workspace = true }
tokio-stream = "0.1.18"
futures = "0.3.32"
tower-http = { version = "0.6.8", features = ["fs"] }